SERVER-12282 fixed memory leak in get_runner. fixed planFromCache signature to reflect cached solution read-only access